--- a/exercises/package.json
+++ b/exercises/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "cse341",
+  "name": "01_week",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "start-prod": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/waheednazeer/cse341.git"
+    "start-prod": "node server.js",
+    "swagger-autogen": "node ./swagger.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mangodb": "^1.0.0",
-    "mongodb": "^5.6.0",
-    "swagger-ui-express": "^4.6.3"
+    "mongodb": "^5.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "swagger-autogen": "^2.23.2"
   }
 }
